{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e7a92a0c-6a4e-4351-b5cf-8e5a728e1657",
            "actions": [
                {
                    "name": "BuyTurret",
                    "type": "Button",
                    "id": "9a66bd95-de4b-4196-8b5e-b461d1e35405",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "68637be9-c236-49e2-8b12-a64229c77514",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "BuyTurret",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BuildMode",
            "id": "23e822c2-2d8c-47a6-a737-ea9d1514bd9a",
            "actions": [
                {
                    "name": "PlaceTurret",
                    "type": "Button",
                    "id": "1f1046be-e278-4d8a-b091-2e0b4a448b10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelTurret",
                    "type": "Button",
                    "id": "f91df433-99df-4565-a8ce-3bb75114c9cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b78996c-4747-42b1-b795-016898d14c5e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "PlaceTurret",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f589f6f3-4def-449c-8e8a-47284c2ba208",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKeyboard",
                    "action": "CancelTurret",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MouseKeyboard",
            "bindingGroup": "MouseKeyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}